fixed messaging word wrap

--- a/src/game.css
+++ b/src/game.css
@@ -54,7 +54,6 @@
   height: 20px;
 }
 
-
 .gameroom-title {
   font-size: 50px;
   text-align: center;
@@ -70,19 +69,20 @@
 }
 
 .message-container {
-  
+  width: fit-content;
+  word-break: break-all;
 }
 .message {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    background-color: white;
-    margin-bottom: 10px;
-    font-size: 12px;
-    border-radius: 5px;
-    word-wrap: break-word;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: fit-content;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: white;
+  margin-bottom: 10px;
+  font-size: 12px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .message-sender {
   margin-left: 5px;
